ukui-search (0.0.1+0123) v101; urgency=medium

  * Bugs Fixed.

 -- zhangpengfei <zhangpengfei@kylinos.cn>  Sat, 23 Jan 2021 13:53:53 +0800

ukui-search (0.0.1+0120) v101; urgency=medium

  * Bugs Fixed.

 -- zhangpengfei <zhangpengfei@kylinos.cn>  Wed, 20 Jan 2021 15:55:57 +0800

ukui-search (0.0.1+0118) v101; urgency=medium

  * Feature: Add animation into inputbox.
  * Feature: Set fixed height for titlelabel.
  * Feature: Add function of querying current index count.
  * Feature: Add more text file encoding formats are supported.
  * Feature: Add ukui-search icon in start menu.
  * Fix: Break line by adding '\n' into path string.(33378)
  * Fix: There is not enough items in homepage.(33320)
  * Fix: Index is empty.(33094)
  * Fix: Translation is incompleted.(33047)
  * Fix: Widget crashed when searching & open file/filepath failed.

 -- zhangjiaping <zhangjiaping@kylinos.cn>  Mon, 18 Jan 2021 14:31:24 +0800

ukui-search (0.0.1+0115) v101; urgency=medium

  * Bugs fixed.

 -- zhangpengfei <zhangpengfei@kylinos.cn>  Fri, 15 Jan 2021 11:01:24 +0800

ukui-search (0.0.1+0114) v101; urgency=medium

  * Bugs fixed.

 -- zhangpengfei <zhangpengfei@kylinos.cn>  Thu, 14 Jan 2021 20:47:42 +0800

ukui-search (0.0.1+0113) v101; urgency=medium

  * Bugs fixed.
  * Functions perfected.

 -- zhangpengfei <zhangpengfei@kylinos.cn>  Wed, 13 Jan 2021 18:55:43 +0800

ukui-search (0.0.1+0104) v101; urgency=medium

  * Initial release.

 -- zhangpengfei <zhangpengfei@kylinos.cn>  Mon, 04 Jan 2021 20:37:23 +0800