@@ -4,8 +4,18 @@
 <context>
     <name>GlobalSettings</name>
     <message>
-        <location filename="../../libsearch/global-settings.cpp" line="99"/>
-        <source>Parent folder has been blocked!</source>
+        <location filename="../../libsearch/global-settings.cpp" line="89"/>
+        <source>I can&apos;t remove an empty path string!</source>
+        <translation>传入参数不能为空！</translation>
+    </message>
+    <message>
+        <location filename="../../libsearch/global-settings.cpp" line="98"/>
+        <source>I can only search your user directory, it doesn&apos;t make any sense if you block an directory which is not in user directory!</source>
+        <translation>搜索只会搜索用户目录下的文件，屏蔽不在用户目录下的路径是没有意义的！</translation>
+    </message>
+    <message>
+        <location filename="../../libsearch/global-settings.cpp" line="110"/>
+        <source>My parent folder has been blocked!</source>
         <translation>我的父文件夹已经被屏蔽了！</translation>
     </message>
 </context>
