@@ -1,3 +1,9 @@
+ukui-search (0.0.1+0126) v101; urgency=medium
+
+  * Bugs Fixed. 
+
+ -- zhangpengfei <zhangpengfei@kylinos.cn>  Tue, 26 Jan 2021 19:07:13 +0800
+
 ukui-search (0.0.1+0123) v101; urgency=medium
 
   * Bugs Fixed.
